--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
-    "routes":[
-        {
-            "src":"/",
-            "dest":"/"
-        },
-        {
-            "src":"/coin",
-            "dest":"/"
-        },
-        {
-            "src":"/coin/:id",
-            "dest":"/"
-        }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
     ]
-}
+  }
